# chipy

./: meson.build
include/chipy/: Callable.h  Dictionary.h  Interpreter.h  Iterator.h  List.h  Module.h  NodeType.h  Object.h  Scope.h  Tuple.h  Value.h  chipy.h
src/compiler/: Compiler.cpp  meson.build
src/interpreter/: Builtin.h  Dictionary.cpp  Document.cpp  Document.h  Generator.cpp  Interpreter.cpp  List.cpp  MemoryManager.cpp  RangeIterator.h  Scope.cpp  Value.cpp  meson.build
src/interpreter/modules/: modules.h  rand.cpp
test/: meson.build  python.cpp
